src/force-app/main/default/objects/AccountMetric__c/AccountMetric__c.object-meta.xml
<CustomObject>
    <description>Year on year collections of account data</description>
    <label>AccountMetric</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountMetrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>