src/force-app/main/default/objects/AccountMetric__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that this data is linked to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountMetrics</relationshipLabel>
    <relationshipName>AccountMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>