src/force-app/main/default/objects/AccountMetric__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>Annual turnover</description>
    <label>Turnover</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>